// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select rendering should initially render correctly 1`] = `
<Select
  className="someClass"
  clearLabel=""
  itemToString={[Function]}
  items={
    Array [
      Object {
        "name": "Sun",
      },
      Object {
        "name": "Moon",
      },
      Object {
        "name": "Mercury",
      },
      Object {
        "name": "Venus",
      },
      Object {
        "name": "Earth",
      },
      Object {
        "name": "Mars",
      },
      Object {
        "name": "Jupiter",
      },
      Object {
        "name": "Saturn",
      },
      Object {
        "name": "Neptune",
      },
      Object {
        "disabled": true,
        "name": "Pluto",
      },
    ]
  }
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onClear={[MockFunction]}
  onFocus={[MockFunction]}
  placeholder=""
  selectedItem={
    Object {
      "name": "Moon",
    }
  }
>
  <SelectBase
    blurredRenderer={[Function]}
    className="someClass"
    clearTitle=""
    focusedRenderer={[Function]}
    inputRef={
      Object {
        "current": undefined,
      }
    }
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onClearAllSelected={[MockFunction]}
    onFocus={[MockFunction]}
    onSelectionAdd={[MockFunction]}
    showArrow={true}
    showClearButton={true}
    suggestionToString={[Function]}
    suggestions={
      Array [
        Object {
          "name": "Sun",
        },
        Object {
          "name": "Moon",
        },
        Object {
          "name": "Mercury",
        },
        Object {
          "name": "Venus",
        },
        Object {
          "name": "Earth",
        },
        Object {
          "name": "Mars",
        },
        Object {
          "name": "Jupiter",
        },
        Object {
          "name": "Saturn",
        },
        Object {
          "name": "Neptune",
        },
        Object {
          "disabled": true,
          "name": "Pluto",
        },
      ]
    }
  >
    <div
      className="SelectBase someClass"
    >
      <Downshift
        defaultHighlightedIndex={0}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns={null}
          className="SelectBase__main"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={false}
            isFocused={false}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={true}
            showClearButton={true}
          >
            <div
              className="FieldWrapper SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  aria-activedescendant={null}
                  aria-autocomplete="list"
                  aria-controls={null}
                  aria-labelledby="downshift-0-label"
                  autoComplete="off"
                  className="Select__wrapper"
                  id="downshift-0-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="searchbox"
                  tabIndex={0}
                  value=""
                >
                  <span
                    className="Select__selected"
                  >
                    Moon
                  </span>
                </div>
                <List
                  aria-labelledby="downshift-0-label"
                  id="downshift-0-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-0-label"
                    className="List"
                    id="downshift-0-menu"
                    role="listbox"
                  />
                </List>
              </div>
              <Button
                className="FieldWrapper__clearButton FieldWrapper__clearButton--rightIndent"
                context="link"
                isInline={true}
                onClick={[Function]}
                title=""
              >
                <button
                  className="Button Button--context_link Button--isInline FieldWrapper__clearButton FieldWrapper__clearButton--rightIndent"
                  disabled={false}
                  onClick={[Function]}
                  title=""
                  type="button"
                />
              </Button>
              <IoMdArrowDropdown
                className="FieldWrapper__dropdownIcon"
              >
                <IconBase
                  attr={
                    Object {
                      "viewBox": "0 0 512 512",
                    }
                  }
                  className="FieldWrapper__dropdownIcon"
                >
                  <svg
                    className="FieldWrapper__dropdownIcon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M128 192l128 128 128-128z"
                      key="0"
                    />
                  </svg>
                </IconBase>
              </IoMdArrowDropdown>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Select>
`;

exports[`Select rendering should render focused component correctly 1`] = `
<Select
  className="someClass"
  clearLabel=""
  itemToString={[Function]}
  items={
    Array [
      Object {
        "name": "Sun",
      },
      Object {
        "name": "Moon",
      },
      Object {
        "name": "Mercury",
      },
      Object {
        "name": "Venus",
      },
      Object {
        "name": "Earth",
      },
      Object {
        "name": "Mars",
      },
      Object {
        "name": "Jupiter",
      },
      Object {
        "name": "Saturn",
      },
      Object {
        "name": "Neptune",
      },
      Object {
        "disabled": true,
        "name": "Pluto",
      },
    ]
  }
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onClear={[MockFunction]}
  onFocus={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder=""
  selectedItem={
    Object {
      "name": "Moon",
    }
  }
>
  <SelectBase
    blurredRenderer={[Function]}
    className="someClass"
    clearTitle=""
    focusedRenderer={[Function]}
    inputRef={
      Object {
        "current": <div
          aria-haspopup="true"
          aria-label="close menu"
          class="Select__wrapper Select__wrapper--isOpen"
          data-toggle="true"
          role="button"
          tabindex="0"
          type="button"
        >
          <span
            class="Select__selected"
          >
            Moon
          </span>
        </div>,
      }
    }
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onClearAllSelected={[MockFunction]}
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    onSelectionAdd={[MockFunction]}
    showArrow={true}
    showClearButton={true}
    suggestionToString={[Function]}
    suggestions={
      Array [
        Object {
          "name": "Sun",
        },
        Object {
          "name": "Moon",
        },
        Object {
          "name": "Mercury",
        },
        Object {
          "name": "Venus",
        },
        Object {
          "name": "Earth",
        },
        Object {
          "name": "Mars",
        },
        Object {
          "name": "Jupiter",
        },
        Object {
          "name": "Saturn",
        },
        Object {
          "name": "Neptune",
        },
        Object {
          "disabled": true,
          "name": "Pluto",
        },
      ]
    }
  >
    <div
      className="SelectBase someClass"
    >
      <Downshift
        defaultHighlightedIndex={0}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-1-label"
          aria-owns="downshift-1-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={true}
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={true}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  aria-haspopup={true}
                  aria-label="close menu"
                  className="Select__wrapper Select__wrapper--isOpen"
                  data-toggle={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="Select__selected"
                  >
                    Moon
                  </span>
                </div>
                <List
                  aria-labelledby="downshift-1-label"
                  className="SelectBase__list--focused"
                  id="downshift-1-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-1-label"
                    className="List SelectBase__list--focused"
                    id="downshift-1-menu"
                    role="listbox"
                  >
                    <SuggestionsList
                      allowMixingSuggestionsAndLoading={false}
                      className="List__item"
                      getItemProps={[Function]}
                      highlightedIndex={0}
                      inputValue=""
                      isLoading={false}
                      key=".0"
                      noSuggestionsPlaceholder=""
                      passDisabledToListItems={true}
                      suggestionToString={[Function]}
                      suggestions={
                        Array [
                          Object {
                            "name": "Sun",
                          },
                          Object {
                            "name": "Moon",
                          },
                          Object {
                            "name": "Mercury",
                          },
                          Object {
                            "name": "Venus",
                          },
                          Object {
                            "name": "Earth",
                          },
                          Object {
                            "name": "Mars",
                          },
                          Object {
                            "name": "Jupiter",
                          },
                          Object {
                            "name": "Saturn",
                          },
                          Object {
                            "name": "Neptune",
                          },
                          Object {
                            "disabled": true,
                            "name": "Pluto",
                          },
                        ]
                      }
                      useOptimizeRender={false}
                    >
                      <ListItem
                        aria-selected={true}
                        disabled={false}
                        id="downshift-1-item-0"
                        isHighlighted={true}
                        key="Sun"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={true}
                          className="ListItem ListItem--isHighlighted ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-0"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Sun
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-1"
                        isHighlighted={false}
                        key="Moon"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-1"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Moon
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-2"
                        isHighlighted={false}
                        key="Mercury"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-2"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Mercury
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-3"
                        isHighlighted={false}
                        key="Venus"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-3"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Venus
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-4"
                        isHighlighted={false}
                        key="Earth"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-4"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Earth
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-5"
                        isHighlighted={false}
                        key="Mars"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-5"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Mars
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-6"
                        isHighlighted={false}
                        key="Jupiter"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-6"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Jupiter
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-7"
                        isHighlighted={false}
                        key="Saturn"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-7"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Saturn
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-8"
                        isHighlighted={false}
                        key="Neptune"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-8"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Neptune
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={true}
                        id="downshift-1-item-9"
                        isHighlighted={false}
                        key="Pluto"
                        onMouseDown={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--disabled"
                          disabled={true}
                          id="downshift-1-item-9"
                          onMouseDown={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Pluto
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                    </SuggestionsList>
                  </ul>
                </List>
              </div>
              <IoMdArrowDropup
                className="FieldWrapper__dropdownIcon"
              >
                <IconBase
                  attr={
                    Object {
                      "viewBox": "0 0 512 512",
                    }
                  }
                  className="FieldWrapper__dropdownIcon"
                >
                  <svg
                    className="FieldWrapper__dropdownIcon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M128 320l128-128 128 128z"
                      key="0"
                    />
                  </svg>
                </IconBase>
              </IoMdArrowDropup>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Select>
`;
